fix product card badge overflow

--- a/themes/origins/styles/product-card.scss
+++ b/themes/origins/styles/product-card.scss
@@ -19,6 +19,14 @@
     &[data-position$="right"] {
       inset-inline-end: 0.8em;
     }
+
+    span {
+      width: 32ch;
+      display: block;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   .img-link {
